<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APPointment</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    
    <string name="username">Username</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="regText">No account yet? Click this button:</string>
    <string name="Profiel">Profile</string>
    <string name="Appointment">Appointment</string>
    <string name="ProfielPic">Profiel picture</string>
    <string name="userName">Name</string>
    <string name="userEmail">Email</string>
    <string name="userPhone">Tel.</string>
    <string name="alter">Edit</string>
    <string name="sendmessage">Send</string>
    <string name="viewmap">Route</string>
    <string name="delete">Delete</string>
    <string name="location">Location</string>
    <string name="back">Back</string>
    <string name="New_appointment">New appointment</string>
    <string name="pic">Logo</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="date">Pick Date</string>
    <string name="time">Pick Time</string>

    <!-- strings for register activity -->
    <string name="reg_name">Name</string>
    <string name="reg_phone">Phone Number</string>
    <string name="reg_mail">E-mail</string>
    <string name="reg_pass1">Password</string>
    <string name="reg_pass2">Password again</string>
	<string name="reg_username">User name</string>
	
    <!-- Send message -->
    <string name="hintToNumber">To number</string>
    <string name="hintMessage">(Optional) Extra message</string>
    <string name="BtnSend">Send</string>

    <string-array name="Default_messages">
        <item>I am late.</item>
        <item>I cannot make it.</item>
        <item>Stuck in traffic.</item>
        <item>I am sick.</item>
        <item>I am early.</item>
        <item>I am waiting.</item>
    </string-array>

    <string name="selectmessage">Select message</string>
    <string name="Deletemessage">Are you sure you want to delete this appointment?</string>

    <!-- strings for new appointment (may be re-used for altering an appointment -->
    <string name="appointment_name">Name</string>
    <string name="appointment_desc">Description</string>
    <string name="appointment_date">Date</string>
    <string name="appointment_location">Location</string>
    <string name="searchLocation">add your location</string>
    <string name="appointment_priority">Priority</string>
    <string name="appointment_reminder">Reminder</string>
    <string name="location_hinttext">street name, nr., city</string>

    <!-- Priority spinner in when creating new appointment -->
    <string-array name="priority_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <string name="title_activity_edit_appointment">EditAppointment</string>
	<string name="EditProfile">EditProfile</string>
	
    
</resources>
