<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/pic"
        android:src="@drawable/icon" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/userEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:onClick="onClickLogin"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/regText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regText" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:onClick="onClickReg"
        android:text="@string/register"
        android:textColor="#FFFFFF" />

</LinearLayout>